--- a/package.json
+++ b/package.json
@@ -6,12 +6,17 @@
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
+    "dev:api_gateway": "nest start --watch",
+    "dev:auth": "nest start microservice-auth --watch",
+    "dev:all": "concurrently -n gateway,auth -c bgMagenta,bgYellow \"npm run dev:api_gateway\" \"npm run dev:auth\"",
     "build": "nest build",
-    "format": "prettier --write \"apps/**/*.ts\" \"libs/**/*.ts\"",
-    "start": "nest start",
-    "start:dev": "nest start --watch",
+    "build:api_gateway": "nest build",
+    "build:auth": "nest build microservice-auth",
+    "build:all": "npm run build:api_gateway && npm run build:auth",
+    "start:api_gateway": "node dist/apps/CodeRank-Backend/main",
+    "start:auth": "node dist/apps/microservice-auth/main",
     "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/apps/CodeRank-Backend/main",
+    "format": "prettier --write \"apps/**/*.ts\" \"libs/**/*.ts\"",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -21,11 +26,15 @@
   },
   "dependencies": {
     "@nestjs/common": "^11.0.1",
+    "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.1",
     "@nestjs/microservices": "^11.1.3",
     "@nestjs/platform-express": "^11.0.1",
+    "@types/nodemailer": "^6.4.17",
+    "class-validator": "^0.14.2",
     "dotenv": "^17.2.0",
     "drizzle-orm": "^0.44.3",
+    "nodemailer": "^7.0.5",
     "pg": "^8.16.3",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
@@ -38,11 +47,13 @@
     "@nestjs/testing": "^11.0.1",
     "@swc/cli": "^0.6.0",
     "@swc/core": "^1.10.7",
+    "@types/bcrypt": "^5.0.2",
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.14",
     "@types/node": "^22.10.7",
     "@types/pg": "^8.15.4",
     "@types/supertest": "^6.0.2",
+    "bcrypt": "^6.0.0",
     "drizzle-kit": "^0.31.4",
     "eslint": "^9.18.0",
     "eslint-config-prettier": "^10.0.1",
